Change tab name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>CodePen</title>
+        <title>Blocks games</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
